<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="layoutID">default</string>
    <string name="promptStatements">Enter SetlX statements:</string>
    <string name="load">($TICKS$/$MEM$MB)</string>
    <string name="loadForBetterAndroid">($TICKS$/$CPU$%/$MEM$MB)</string>
    <string name="promptFile">Enter path to SetlX file:</string>
    <string name="app_name">setlX</string>
    <string name="output">&lt;br />&lt;b>setlX v$VERSION$&lt;/b>&lt;br />&lt;br />Open Source Software from&lt;br />$URL_START$setlx.randoom.org$URL_END$&lt;br />&lt;br />&lt;small>© $YEARS$ by Herrmann, Tom&lt;/small></string>
    <string name="buttonExecute">Execute</string>
    <string name="buttonOpenFile">Open</string>
    <string name="menuClear">Clear</string>
    <string name="menuReset">Reset</string>
    <string name="toastReset">Memory contents was reset.</string>
    <string name="toastRestart">Restart has reset memory contents.</string>
    <string name="menuCopy">Copy Output</string>
    <string name="toastCopy">Output copied to clipboard.</string>
    <string name="menuTrace2ON">Enable Tracing</string>
    <string name="menuTrace2OFF">Disable Tracing</string>
    <string name="toastTraceOn">Tracing of assignments enabled.</string>
    <string name="toastTraceOff">Assignments will not be traced.</string>
    <string name="menuRuntimeDebugging2ON">Enable Runtime Debugging</string>
    <string name="menuRuntimeDebugging2OFF">Disable Runtime Debugging</string>
    <string name="runtimeDebuggingOn">Runtime Debugging enabled.</string>
    <string name="runtimeDebuggingOff">Runtime Debugging disabled.</string>
    <string name="menuRandom2ON">Unpredictable Random</string>
    <string name="menuRandom2OFF">Predictable Random</string>
    <string name="toastRandomON">Random functions will return non-deterministic results.</string>
    <string name="toastRandomOFF">Random functions will return deterministic results (debugging mode).</string>
    <string name="menuAsserts2ON">Enable Assertions</string>
    <string name="menuAsserts2OFF">Disable Assertions</string>
    <string name="toastAssertsOn">Assertions enabled.\nMemory contents was reset.</string>
    <string name="toastAssertsOff">Assertions disabled.\nMemory contents was reset.</string>
    <string name="menuAutoReset2ON">Enable Auto Reset</string>
    <string name="menuAutoReset2OFF">Disable Auto Reset</string>
    <string name="toastAutoResetON">Auto Reset enabled.\nMemory content will be reset after executing files.</string>
    <string name="toastAutoResetOFF">Auto Reset disabled.\nMemory content will not be reset after executing files.</string>
    <string name="toastAutoReset">Memory content automatically reset.</string>
    <string name="menuWriteFiles">(Re)write Files</string>
    <string name="menuWriteFilesQuestion">Which files should be (re)written?\n\nWarning:\nThis overwrites existing files.</string>
    <string name="menuWriteFilesLibrary">Library</string>
    <string name="menuWriteFilesExamples">Examples</string>
    <string name="menuWriteFilesCancel">Cancel</string>
    <string name="writeFilesStart">Writing files…</string>
    <string name="writeFilesSuccess">Files written:</string>
    <string name="writeFilesFailed">Writing files failed…</string>
    <string name="menuAbout">About</string>
    <string name="menuQuit">Quit</string>
    <string name="menuKill">Terminate Execution</string>
    <string name="msgKillStarted">\nExecution will be terminated. This may take a while.</string>
    <string name="msgKill">\nExecution terminated, memory contents reset.</string>
    <string name="about">&lt;b>setlX v$VERSION$&lt;/b>&lt;br />&lt;small>(Base v$BASE_VERSION$)&lt;br />(Shell A$SHELL_VERSION$)&lt;/small>&lt;br />&lt;br />Open Source Software from&lt;br />$URL_START$setlx.randoom.org$URL_END$&lt;br />&lt;br />&lt;small>© $YEARS$ by Herrmann, Tom&lt;/small>&lt;br />&lt;br />This program uses the&lt;br />$ANTLR_URL_START$ANTLR parser generator$URL_END$&lt;br />and the&lt;br />android-filechooser&lt;br />library.&lt;br/></string>
    <string name="buttonModeFile">→ File Mode</string>
    <string name="buttonModeInteractive">→ Interactive</string>
    <string name="toastNotPossibleWhileRunning">This action may not be performed during execution.</string>
    <string name="clipBoardKey">setlX output</string>
    <string name="noAccessToExternalStorage">External storage cannot be accessed.</string>

</resources>
